tests/NormalTests/paczka1/fuzzy1/98236545.err
Error in line 9: oKteW5ZdVHw A889 35,7
Error in line 18: oKteW5ZdVHw A10 74,3
Error in line 24: oKteW5ZdVHw A547 52,2
Error in line 26: 2ps A889 107,8
Error in line 29: A889 S290 34,1
